 cmake_minimum_required(VERSION 3.8)
 project(MD5Encrypter)

 add_definitions("-std=c++11")

 include(${CMAKE_BINARY_DIR}/conanbuildinfo.cmake)
 conan_basic_setup()

 add_executable(app src/main.cpp src/ui_console.cpp)
 target_compile_features(app PUBLIC cxx_std_17)
 target_link_libraries(app ${CONAN_LIBS})

